--- a/image0.html
+++ b/image0.html
@@ -4,6 +4,6 @@
   <title>My Web Page!</title>
  </head>
  <body>
-  <img src = "cat.jpg" alt="cat"
+  <img src = "file:///C:/Users/Zay/Desktop/cat.jpg" alt="cat"
  </body>
 </html>
